--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -237,7 +237,9 @@
         ]]></change-notes>
 
     <depends>com.intellij.modules.lang</depends>
-
+    <depends>com.intellij.modules.platform</depends>
+    <depends>com.intellij.modules.xdebugger</depends>
+    
     <!--<depends optional="true" config-file="lua-copyright.xml">com.intellij.copyright</depends>-->
 
     <application-components>
@@ -321,6 +323,7 @@
 
         <!-- Script Debugging -->
         <programRunner implementation="com.sylvanaar.idea.Lua.debugger.LuaDebugRunner"/>
+        <xdebugger.breakpointType implementation="com.sylvanaar.idea.Lua.debugger.LuaLineBreakpointType" />
         <!--<configurationType implementation="com.sylvanaar.idea.Lua.debugger.LuaRemoteDebugConfigurationType"/>-->
         <!--<xdebugger.settings implementation="com.sylvanaar.idea.Lua.debugger.LuaDebuggerSettings"/>-->
         
