options for LuaDoc hilighting, and folding of LuaDocs. At this point LuaDocs need to end in a newline otherwise they will screw up the lexing of the file

--- a/resources/com/sylvanaar/idea/Lua/LuaBundle.properties
+++ b/resources/com/sylvanaar/idea/Lua/LuaBundle.properties
@@ -60,5 +60,6 @@ color.settings.field=Field
 color.settings.tailcall=Tail Call Returns
 color.settings.parameter=Parameter
 color.settings.upvalue=Upvalue
+color.settings.luadoc=LuaDoc Comment
 
 
