--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -17,8 +17,8 @@
 <idea-plugin url="http://bitbucket.org/sylvanaar2/lua-for-idea/" version="2">
     <name>Lua</name>
     <id>Lua</id>
-    <version>0.9.81</version>
-    <!--##teamcity[buildNumber '0.9.81']-->
+    <version>0.9.82</version>
+    <!--##teamcity[buildNumber '0.9.82']-->
     <idea-version since-build="80.8000" until-build="107.9999" />
     <category>Custom Languages</category>
     <vendor url="https://www.ohloh.net/accounts/sylvanaar" email="sylvanaar@mindspring.com">sylvanaar</vendor>
@@ -69,6 +69,8 @@
     <change-notes><![CDATA[
         <html>
         <dl>
+            <dt>0.9.82</dt>
+            <dd>Complete revamp of the API documentation system.</dd><br>
             <dt>0.9.81</dt>
             <dd>LuaDoc hilighting and folding. Bugfix for missing intention examples</dd><br>
             <dt>0.9.80</dt>
