for experimenting i added a docuemtnation provider for luadoc.

--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -368,6 +368,8 @@
         <lang.documentationProvider language="Lua" order="first"
                                     implementationClass="com.sylvanaar.idea.Lua.lang.documentor.KahluaPluginDocumentationProvider" />
         <lang.documentationProvider language="Lua" order="last"
+                                    implementationClass="com.sylvanaar.idea.Lua.lang.documentor.LuaDocDocumentationProvider" />
+        <lang.documentationProvider language="Lua" order="last"
                                     implementationClass="com.sylvanaar.idea.Lua.lang.documentor.ContextualDocumentationProvider" />
 
         <lang.psiStructureViewFactory language="Lua"
