a drastic simplification of the LuaDoc code. Since the original code was from Groovy/Java it did things we didnt care about. So there was no use in keeping that code around.

--- a/resources/com/sylvanaar/idea/Lua/LuaBundle.properties
+++ b/resources/com/sylvanaar/idea/Lua/LuaBundle.properties
@@ -61,5 +61,7 @@ color.settings.tailcall=Tail Call Returns
 color.settings.parameter=Parameter
 color.settings.upvalue=Upvalue
 color.settings.luadoc=LuaDoc Comment
+color.settings.luadoc.tag=LuaDoc Tag
+color.settings.luadoc.value=LuaDoc Value
 
 
