restore the ability to hilight the long form braces for strings and comments. also fix some annoying auto closings of these like typing [[ would get you [[]. Implement quote handler so we get auto insertion of closing quotes. It doesnt seem to work for the extended quotes though - so MMMV

--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -341,7 +341,7 @@
         <colorSettingsPage implementation="com.sylvanaar.idea.Lua.editor.highlighter.LuaColorsPage"/>
 
 
-        <!--<quoteHandler fileType="Lua" className="com.sylvanaar.idea.Lua.editor.highlighter.LuaQuoteHandler" />-->
+        <quoteHandler fileType="Lua" className="com.sylvanaar.idea.Lua.editor.highlighter.LuaQuoteHandler" />
 
         <!-- Annotator extensions -->
         <annotator language="Lua" implementationClass="com.sylvanaar.idea.Lua.editor.annotator.LuaAnnotator" />
