implemented an extremely agressive completion solution available with the "Add additional completions" option. This allows API's to define object methonds e.g a.b() a:b() that work independantly of the object, so you could complete :b() on any object or .b() for that matter. fixes #48

--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -411,6 +411,7 @@
 
         <stubIndex implementation="com.sylvanaar.idea.Lua.lang.psi.stubs.index.LuaFullScriptNameIndex"/>
         <stubIndex implementation="com.sylvanaar.idea.Lua.lang.psi.stubs.index.LuaGlobalDeclarationIndex" />
+        <stubIndex implementation="com.sylvanaar.idea.Lua.lang.psi.stubs.index.LuaFieldIndex" />
 
         <!--<java.shortNamesCache implementation="com.sylvanaar.idea.Lua.lang.psi.stubs.LuaShortNamesCache" />-->
         <!--<targetElementEvaluator language="Lua" implementationClass="com.sylvanaar.idea.Lua.codeInsight.LuaTargetElementEvaluator"/>-->
